# OxiCloud-desktop

./: .env.example  .flutter-plugins  .flutter-plugins-dependencies  .gitignore  ARCHITECTURE.md  CLAUDE.md  CROSS_COMPILE_WINDOWS.md  Cargo.toml  DEVELOPER.md  DOCUMENTATION.md  IMPLEMENTATION_GUIDE.md  LICENSE  Makefile  README.md  RESOURCE_OPTIMIZATION.md  TECHNICAL_GUIDE.md  TODO.md  WINDOWS_BUILD.md  analysis_options.yaml  build_all.bat  build_all.sh  flutter_exclude_plugins.yaml  flutter_rust_bridge.yaml  pubspec.yaml  setup.sh  update_packages.bat  update_packages.sh
.cargo/: config
.dart_tool/: package_config.json  package_config_subset
.dart_tool/build_resolvers/: sdk.sum.deps
.dart_tool/flutter_build/: dart_plugin_registrant.dart
.dart_tool/flutter_build/0776e83245ebf8deac5f83298654664b/: .filecache  debug_bundle_linux-x64_assets.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  kernel_snapshot.d  kernel_snapshot.stamp  linux_engine_sources.d  native_assets.d  native_assets.stamp  outputs.json  unpack_linux.stamp
.github/workflows/: android.yml  build.yml  ci.yml  ios.yml  linux-build.yml  linux.yml  macos.yml  multi-platform-build.yml  release.yml  windows-build.yml  windows.yml
android/: build.gradle  build.gradle.kts  local.properties  settings.gradle
android/app/: build.gradle  build.gradle.kts
assets/l10n/: app_en.arb  app_es.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_es.dart
docs/: ARCHITECTURE.md  DEVELOPER_ENCRYPTION.md  ENCRYPTION.md  ENCRYPTION_INTEGRATION.md  ERROR_HANDLING.md  SYNC-ENGINE.md
integration_test/: simple_test.dart
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: GeneratedPluginRegistrant.m  Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  app_router.dart  injection.dart  main.dart  providers.dart
lib/application/services/: auth_service.dart  file_service.dart  folder_service.dart  native_fs_service.dart  sync_service.dart  trash_service.dart
lib/application/use_cases/: login_use_case.dart
lib/core/auth/: secure_storage.dart
lib/core/config/: app_config.dart  constants.dart
lib/core/database/: app_database.dart  app_database.g.dart
lib/core/di/: dependency_injection.dart  injection.config.dart  injection.dart  shared_preferences_module.dart
lib/core/entities/: favorite_item.dart  file_item.dart  search_results.dart  share_item.dart  sync_folder.dart  sync_status.dart  trash_item.dart  user.dart
lib/core/error/: error_handler.dart  exceptions.dart  failures.dart
lib/core/errors/: failures.dart
lib/core/logging/: logging_manager.dart
lib/core/network/: api_client.dart  api_endpoints.dart  connectivity_service.dart  network_info.dart
lib/core/platform/: battery_service.dart  device_info_service.dart  platform_info.dart
lib/core/repositories/: auth_repository.dart  favorites_repository.dart  file_browser_repository.dart  recent_repository.dart  search_repository.dart  share_repository.dart  sync_repository.dart  trash_repository.dart
lib/core/services/: chunked_upload_service.dart
lib/core/storage/: linux_secure_storage.dart  secure_storage.dart  secure_storage_stub.dart
lib/core/sync/: sync_engine.dart  sync_models.dart
lib/core/theme/: app_colors.dart  app_theme.dart  responsive.dart
lib/core/usecases/: login_usecase.dart  select_folders_usecase.dart  start_sync_usecase.dart
lib/core/utils/: constants.dart  extensions.dart
lib/data/datasources/: api_client.dart  batch_api_datasource.dart  chunked_upload_datasource.dart  favorites_api_datasource.dart  file_browser_api_datasource.dart  recent_api_datasource.dart  (+4 more)
lib/l10n/: app_en.arb  app_es.arb
lib/models/: file_model.dart
lib/platform/: desktop_window.dart  system_tray_service.dart
lib/presentation/: app.dart
lib/services/: api_service.dart
lib/theme/: app_theme.dart
lib/widgets/: file_view.dart  sidebar.dart  top_bar.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: CMakeLists.txt  my_application.cc
macos/: Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist
macos/Runner.xcodeproj/: project.pbxproj
packaging/linux/: build_no_libsecret.sh  create_appimage.sh  create_deb.sh  create_rpm.sh
rust/: Cargo.toml  README.md
rust/src/: api.rs  frb_generated.rs  lib.rs
rust/src/api/: mod.rs  oxicloud.rs
rust/src/application/: auth_service.rs  file_watcher_service.rs  mod.rs  sync_service.rs
rust/src/domain/: mod.rs
rust/src/domain/entities/: auth.rs  config.rs  mod.rs  sync_item.rs  sync_status.rs
rust/src/domain/ports/: auth_port.rs  file_watcher_port.rs  mod.rs  storage_port.rs  sync_port.rs
rust/src/infrastructure/: file_watcher.rs  mod.rs  sqlite_storage.rs  webdav_client.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: oxicloud_core.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: oxicloud_core.podspec
rust_builder/windows/: CMakeLists.txt
src/: app.rs  lib.rs  main.rs
src/application/: mod.rs
src/components/: context_menu.rs  file_list.rs  mod.rs  new_folder_modal.rs  sidebar.rs  sync_status_indicator.rs
src/infrastructure/: di.rs  mod.rs
src/interfaces/: app.rs  components.rs  pages.rs
src/models/: file.rs  mod.rs  sync.rs  user.rs
src/pages/: encryption.rs  files.rs  login.rs  mod.rs  password_recovery.rs  settings.rs
src/ui/: app_state.rs  mod.rs  theme.rs
temp_project/oxicloud_temp/: README.md  pubspec.yaml
test/: smoke_compilation_test.dart  widget_test.dart
test/blocs/: auth_bloc_test.dart  sync_bloc_test.dart
tests/: encryption_sync_integration_tests.rs  encryption_tests.rs  file_encryption_tests.rs  recovery_tests.rs  sync_encryption_test.rs
windows/: CMakeLists.txt  inno_setup.iss
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  flutter_window.cpp  main.cpp
wix/: main.wxs  variables.wxs
(+349 files in other folders)
