[package]
name = "oxicloud-desktop-client"
version = "0.1.0"
edition = "2021"
authors = ["OxiCloud Team"]
description = "Desktop client for OxiCloud service"

[dependencies]
# UI Framework
egui = "0.23.0"
eframe = "0.23.0"
egui_extras = "0.23.0"

# Async/HTTP
tokio = { version = "1.28.0", features = ["full"] }
reqwest = { version = "0.11.20", features = ["json", "rustls-tls"] }
async-trait = "0.1.71"

# WebDAV
http = "0.2.9"
bytes = "1.4.0"
quick-xml = "0.30.0"
base64 = "0.21.2"

# Database
rusqlite = { version = "0.29.0", features = ["bundled"] }
tokio-rusqlite = "0.4.0"

# Serialization
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"

# Utilities
chrono = { version = "0.4.26", features = ["serde"] }
dirs = "5.0.1"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
mime_guess = "2.0.4"
image = { version = "0.24.7", features = ["jpeg", "png", "webp"] }

# Security
keyring = "2.0.5"

# Error handling
anyhow = "1.0.72"
thiserror = "1.0.44"

# Logging
log = "0.4.19"
env_logger = "0.10.0"

[dev-dependencies]
mockall = "0.11.4"
tempfile = "3.8.0"
