[package]
name = "oxicloud_core"
version = "0.1.0"
edition = "2021"
description = "OxiCloud sync engine - cross-platform file synchronization core"
authors = ["OxiCloud Team"]
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "sync"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP/WebDAV client
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
quick-xml = "0.31"

# Local database
rusqlite = { version = "0.30", features = ["bundled"] }

# File system watching
notify = "6.1"

# Cryptography
sha2 = "0.10"
md5 = "0.7"
hex = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Flutter Rust Bridge
flutter_rust_bridge = "=2.0.0"

# Cross-platform paths
dirs = "5.0"

# Keyring for secure credential storage
keyring = "2.3"

# Mock support (optional)
mockall = { version = "0.12", optional = true }

[dev-dependencies]
tempfile = "3.9"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[features]
default = []
mock = ["mockall"]
