[package]
name = "oxicloud_core"
version = "0.1.0"
edition = "2021"
description = "OxiCloud sync engine - cross-platform file synchronization core"
authors = ["OxiCloud Team"]
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full", "sync"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP/WebDAV client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls-webpki-roots", "charset"], default-features = false }
quick-xml = "0.39"

# Local database
rusqlite = { version = "0.38", features = ["bundled"] }

# File system watching
notify = "8.2"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.20", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Flutter Rust Bridge
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono"] }

# Mock support (optional)
mockall = { version = "0.14", optional = true }

[dev-dependencies]
tempfile = "3.25"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[features]
default = []
mock = ["mockall"]
